<resources>
    <string name="app_name">SupCake</string>

    <string name="txt_nuevaVenta">Nueva Venta</string>
    <string name="txt_clientes">Clientes</string>
    <string name="txt_catalogo">Catálogo</string>
    <string name="txt_estadisticas">Estadísticas</string>

    <string name="title_activity_login">Login</string>
    <string name="txt_usuario">Usuario</string>
    <string name="txt_password">Contraseña</string>
    <string name="accion_ingresar">Entrar</string>
    <string name="txt_bienvenido">"¡Bienvenido!"</string>
    <string name="txt_usuario_invalido">Usuario inválido</string>
    <string name="txt_password_invalido">Contraseña inválida</string>
    <string name="txt_fallo_login">"Error en Login"</string>

    <string name="sinTexto"> </string>
    <string name="TextView">TextView</string>
    <string name="txt_ID">ID</string>

    <string name="txt_modoAdministrador">Modo\nAdministrador</string>
    <string name="txt_volverAlMenu">Volver al Menu</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_guardarCambios">Guardar Cambios</string>

    <string name="txt_catalogoVacio">El catálogo se encuentra vacío actualmente.</string>
    <string name="txt_nombreProducto">Nombre Producto</string>
    <string name="txt_precioProducto">Precio</string>
    <string name="txt_addProducto">Añadir\nProducto</string>
    <string name="txt_tituloFichaNuevoProducto">Añadir Nuevo Producto</string>
    <string name="txt_nuevaImagen">Nueva Imagen</string>
    <string name="txt_examinar">Examinar…</string>
    <string name="txt_stockDisponible">Stock Disponible</string>
    <string name="txt_actualizarStock">Actualizar Stock</string>
    <string name="txt_hint_actualizarStock">+- cantidad</string>
    <string name="txt_editarProducto">Editar Producto</string>
    <string name="txt_eliminarProducto">Eliminar Producto</string>
    <string name="txt_buscarCatalogo">Buscar en catálogo…</string>

    <string name="txt_nombreVendedorTitulo">Nombre Vendedor</string>
    <string name="txt_fechaInicial">Fecha Inicial</string>
    <string name="txt_fechaFinal">Fecha Final</string>
    <string name="txt_opcional">(opcional)</string>
    <string name="txt_hint_formatofecha">DD/MM/AAAA</string>
    <string name="txt_obtenerEstadisticas">Obtener Estadísticas</string>

    <string name="txt_addCliente">Añadir\nCliente</string>
    <string name="txt_tituloFichaNuevoCliente">Añadir Nuevo Cliente</string>
    <string name="txt_nombreCliente">Nombre Cliente</string>
    <string name="txt_direccionCliente">Dirección Cliente</string>
    <string name="txt_confirmarEliminarCliente">¿Está seguro que desea eliminar al cliente de la planilla?</string>
    <string name="txt_planillaVacia">La planilla de Clientes se encuentra vacía actualmente.</string>

    <string name="txt_SI">SI</string>
    <string name="txt_NO">NO</string>

    <string name="txt_seguirVenta">Seguir con Venta</string>
    <string name="txt_cantidad">Cantidad</string>
    <string name="txt_descuento">Descuento</string>
    <string name="txt_totalCompraProducto">Total Compra Producto</string>
    <string name="txt_producto">Producto</string>
    <string name="txt_cantidad_abrev">Cnt.</string>
    <string name="txt_descuento_abrev">Dcto.</string>
    <string name="txt_total">Total</string>
    <string name="txt_totalVenta">Total Venta</string>
    <string name="txt_totalMontoVenta">Monto Total de Venta</string>
    <string name="txt_fechaHoraVenta">Fecha y Hora de Venta</string>
    <string name="txt_solicitarIDCliente">Ingrese ID de CLiente si Corresponde</string>
    <string name="txt_confirmarVenta">Confirmar Venta</string>
    <string name="txt_ventaExitosa">Venta realizada e ingresada con éxito al sistema.</string>

    <string name="txt_0">0</string>
    <string name="txt_1">1</string>
</resources>