<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarEliminarCliente">

    <include
        android:id="@+id/include11"
        layout="@layout/activity_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView_cuadroAlerta"
        android:layout_width="319dp"
        android:layout_height="251dp"
        android:contentDescription="@string/sinTexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include11"
        app:layout_constraintVertical_bias="0.393"
        app:srcCompat="@drawable/alert" />

    <Button
        android:id="@+id/boton_confirmarEliminarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="180dp"
        android:background="@color/royalBlue"
        android:fontFamily="@font/fira_mono_medium"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt_SI"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/include11"
        app:layout_constraintTop_toTopOf="@+id/imageView_cuadroAlerta" />

    <Button
        android:id="@+id/boton_cancelarEliminarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/maroon"
        android:fontFamily="@font/fira_mono_medium"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt_NO"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_cuadroAlerta" />

    <TextView
        android:id="@+id/textView_mensajeAlertaEliminarCliente"
        android:layout_width="285dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fira_mono_medium"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt_confirmarEliminarCliente"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_cuadroAlerta" />
</androidx.constraintlayout.widget.ConstraintLayout>